getMissionByID
