# docs/swagger.yaml
@@ -476,6 +476,41 @@ paths:
       summary: Create mission
       tags:
       - Mission
+  /missions/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get mission by ID
+      parameters:
+      - description: Mission ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Mission
+          schema:
+            $ref: '#/definitions/domain.Mission'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/domain.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get mission by ID
+      tags:
+      - Mission
 securityDefinitions:
   ApiKeyAuth:
     in: header
